--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
     "@auth/prisma-adapter": "^2.4.2",
     "@prisma/client": "^5.19.1",
     "daisyui": "^4.12.10",
-    "eslint-config-prettier": "^9.1.0",
     "next": "14.2.8",
     "next-auth": "^4.24.7",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
     "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
@@ -26,8 +23,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/parser": "^7.2.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
